apps/gateway-api-demo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: gw-api-demo
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
